# JuliaSet

./: .gitignore  CMakeLists.txt  juliaset.cpp
